# sipin-meemoo-sip-2-transformator

./: .copier-answers.yml  .env.example  .gitmodules  README.md  config.yml  main.py  pyproject.toml
.openshift/: Jenkinsfile  Makefile  sipin-mh-sip-creator-multibranch-pipeline.xml
app/: app.py  dc_schema.py  descriptive.py  mets.py  parse.py  premis.py  preservation.py  utils.py
app/descriptive/: __init__.py  dc_schema.py  descriptive.py  mods.py  schema.py  sippify.py  xml_lang.py
app/parse/: __init__.py
app/services/: config.py  pulsar.py
app/v2_1/: __init__.py  level.py  mets.py  models.py  namespaces.py  parse.py  preservation.py  sip.py  utils.py  version.py
app/v2_1/descriptive/: __init__.py  dc_schema.py  descriptive.py  mods.py  schema.py  sippify.py  xml_lang.py
app/v2_1/descriptive/models/: dc_schema.py  xml_lang.py
app/v2_1/preservation/: events.py  film.py  premis.py  premis_utils.py  preservation.py
app/v2_1/structural/: mets.py
tests/: test_app.py  test_examples.py  test_service.py
tests/v2_1/: test_examples.py
tests/v2_1/dc_schema/: test_completeness.py  test_is_part_of.py
tests/v2_1/dc_schema/samples/: sample_01.xml
tests/v2_1/film/: film_extension.xml  test_film_extension.py
transformator/: app.py  utils.py
transformator/cli/: cli_transformator.py
transformator/services/: config.py
transformator/v2_1/: __init__.py  transform.py  utils.py
transformator/v2_1/descriptive/: dc_schema.py  descriptive.py  mods.py
transformator/v2_1/mets/: mets.py
transformator/v2_1/preservation/: film.py  premis.py
