[project]
name = "sipin-meemoo-sip-2-transformator"
version = "0.0.1"
description = "A service that transforms a meemoo SIP to a (Python) model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "viaa-chassis",
    "pulsar-client",
    "meemoo-cloudevents",
    "lxml==5.4.0",
    "python-dateutil==2.9.0.post0",
    "sipin-eark-models",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "types-lxml==2025.3.30",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--rootdir=./app/ -v"
testpaths = ["tests"]
