[project]
name = "sipin-meemoo-sip-2-transformator"
version = "0.0.1"
description = "A service that transforms a meemoo SIP to a (Python) model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "viaa-chassis",
    "pulsar-client",
    "meemoo-cloudevents",
    "lxml==5.4.0",
    "sipin-eark-models==0.0.1",
    "SIP.py==0.0.1",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "types-lxml==2025.3.30",
    "pytest==8.4.0",
    "pytest-cov==6.1.1",
    "testcontainers==4.10.0",
    "ruff==0.12.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--rootdir=./app/ -v"
testpaths = ["tests"]
