[project]
name = "sipin-meemoo-sip-2-transformator"
version = "0.0.1"
description = "A service that transforms a meemoo SIP to a SIP.py model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "viaa-chassis==0.2.1",
    "pulsar-client==3.7.0",
    "meemoo-cloudevents==0.1.0rc3",
    "lxml==5.4.0",
    "pydantic==2.11.7",
    "sipin-eark-models==0.0.13",
    "SIP.py==0.0.9",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "types-lxml==2025.3.30",
    "pytest==8.4.0",
    "pytest-cov==6.1.1",
    "testcontainers==4.10.0",
    "ruff==0.12.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
